--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,9 @@
 <!--        </dependency>-->
         <!-- Simple logger for SLF4J -->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.6.5</version>
-            <scope>runtime</scope>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.11</version>
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>ch.qos.logback</groupId>-->
@@ -48,12 +47,42 @@
             <groupId>com.ontotext.graphdb</groupId>
             <artifactId>graphdb-free-runtime</artifactId>
             <version>9.11.1</version>
+            <exclusions>
+                <!-- Block slf4j-log4j12 and logback if they sneak in -->
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- RML Mapper -->
         <dependency>
             <groupId>be.ugent.rml</groupId>
             <artifactId>rmlmapper</artifactId>
             <version>5.0.0</version>
+            <exclusions>
+                <!-- Prevent hidden bindings from creeping in -->
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 
